# kodiki

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE-GIGA  MangoHud.conf  README.md  TASKS.md  TODO  TODO0  TODO1  make_build.sh  prepare_runtime.sh  run.sh  run_debug.sh
.cargo/: config.toml
assets/lsp/rust-analyzer/: rust-analyzer
assets/meshes/cursor/: default.gltf
assets/screencasts/: 2022-08-15 09-29-15.mkv  2022-08-19 00-09-46.mkv  2022-10-23 00-29-14.mkv  2022-10-23 00-32-43.mkv
assets/shadertoy/nightsky/: image.wgsl
assets/utils/: axis_cube.gltf
playground/: easy_spawn.rs  herringbone_spawn.rs  test_letter_spacing.rs  test_simple.rs  test_tabs.rs
src/: macros.rs  main.rs  z_order.rs
src/bevy_ab_glyph/: emoji_generator.rs  font_loader.rs  generator_common.rs  glyph_generator.rs  glyph_image_generator.rs  glyph_mesh_generator.rs  mesh_generator.rs  mod.rs
src/bevy_framerate_manager/: conditions.rs  mod.rs  systems.rs
src/bevy_helix/: animate.rs  application.rs  compositor.rs  cursor.rs  editor.rs  fill.rs  helix_app.rs  input.rs  mod.rs  render.rs  search.rs  spawn.rs  systems.rs  systems_util.rs  tween_lens.rs  update.rs  utils.rs
src/bevy_helix/minimap/: mod.rs  systems.rs  systems_util.rs
src/bevy_helix/surface/: coloring_lines.rs  mod.rs  quads.rs  systems.rs  words.rs
src/bevy_helix/update/: mod.rs  quads.rs  words.rs
src/bevy_wezterm/: key_code.rs  mod.rs  systems.rs
src/game/: mod.rs  spawn.rs  systems.rs  utils.rs
src/helix_application/: compositor.rs  helix_application.rs  mod.rs  systems.rs
src/kodiki/: mod.rs  run_condition.rs  spawn.rs  systems.rs  systems_util.rs
src/kodiki_ui/: color.rs  mod.rs  spawn.rs  systems.rs  tween_lens.rs  utils.rs
src/kodiki_ui/context_switcher/: mod.rs  systems.rs
src/kodiki_ui/popups/: mod.rs  systems.rs
src/kodiki_ui/raypick/: mod.rs  systems.rs  systems_utils.rs
src/kodiki_ui/resizer/: mod.rs  systems.rs
src/kodiki_ui/text_background_quad/: mod.rs  systems.rs
src/kodiki_ui/text_cursor/: mod.rs  systems.rs
src/kodiki_ui/text_surface/: coloring_lines.rs  mod.rs  systems.rs  words.rs
src/text/: mod.rs  rust-analyzer.rs  spawn.rs  systems.rs  utils.rs
