[package]
name = "kodiki"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kodiki"
path = "src/main.rs"

# 1 Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# 3 Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]

default			    = []
# tracing, stats and debug are broken in bevy 0.12
#tracing			= ["bevy_egui", "puffin_egui", "bevy_puffin"]
#stats				= ["bevy-debug-text-overlay"]
#debug				= ["bevy_prototype_debug_lines", "bevy_polyline", "bevy-debug-text-overlay"]
word_spawn_debug	= []
scroll_offset_debug	= []

[dependencies]

#
# GENERIC
#

itertools			= "0.10"
ron 				= "0.8"
bitflags			= "2.3"
serde 				= { version = "1", features = ["derive"] }
serde_json			= { version = "1.0.83" }
hex                 = { version = "0.4.3"}
futures-lite		= { version = "1.11.3" }

#
# BEVY
#

bevy 				= { version = "0.13", features = ["bevy_render", "wayland"] }

bevy_framepace		= { version = "0.15" }
bevy_tweening		= { version = "0.10" }

# modified for kodiki

bevy_contrib_colors = { git = "https://github.com/gavlig/bevy_contrib_colors.git", branch = "kodiki" }
bevy_reader_camera	= { git = "https://github.com/gavlig/bevy_reader_camera.git", branch = "kodiki" }

bevy_rapier3d		= { git = "https://github.com/gavlig/bevy_rapier", branch = "kodiki", features = ["simd-stable", "debug-render"] }

# text rendering

ab_glyph			= "0.2.18"  # read ttf/otf and get parametric glyphs 
lyon				= "1.0.1"   # convert paramteric glyphs to 2d geometry

#
# HELIX
#

helix-core			= { git = "https://github.com/gavlig/helix-editor.git", branch = "kodiki" }
helix-lsp			= { git = "https://github.com/gavlig/helix-editor.git", branch = "kodiki" }
helix-dap			= { git = "https://github.com/gavlig/helix-editor.git", branch = "kodiki" }
helix-loader		= { git = "https://github.com/gavlig/helix-editor.git", branch = "kodiki" }
helix-view			= { git = "https://github.com/gavlig/helix-editor.git", branch = "kodiki" }
helix-term			= { git = "https://github.com/gavlig/helix-editor.git", branch = "kodiki" }
helix-tui			= { git = "https://github.com/gavlig/helix-editor.git", branch = "kodiki" }

anyhow				= "1"
signal-hook			= "0.3"

tokio				= { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
tokio-stream		= { version = "0.1" }
arc-swap			= { version = "1.5.1" }
futures-util		= { version = "0.3", features = ["std", "async-await"], default-features = false }

log					= { version = "0.4" }

#
# WEZTERM
#

wezterm_portable    = { git = "https://github.com/gavlig/wezterm_portable.git", branch = "kodiki_0.1" }

portable-pty		= { git = "https://github.com/gavlig/wezterm.git", branch = "kodiki_0.1" }
termwiz				= { git = "https://github.com/gavlig/wezterm.git", branch = "kodiki_0.1", features = ["use_image"] }
crossbeam-channel	= { version = "0.5" }

[target.'cfg(not(windows))'.dependencies]  # https://github.com/vorner/signal-hook/issues/100
signal-hook-tokio	= { version = "0.3", features = ["futures-v0_3"] }

#
#
#

[patch.crates-io]
# bevy				= { git = "https://github.com/gavlig/bevy.git", branch = "kodiki" }
# rapier3d			= { git = "https://github.com/gavlig/rapier.git", branch = "kodiki" }

